# Rustymath

./: .env  Cargo.toml
src/: main.rs
